--- a/Breast_Cancer_Classification_with_NN.ipynb
+++ b/Breast_Cancer_Classification_with_NN.ipynb
@@ -18,7 +18,7 @@
       "cell_type": "markdown",
       "source": [
         "# Task : Breast Cancer Classification with a simple Neural Network\n",
-        "##Created by : Kapil Yadav"
+        "##Created by : Ajinkya Charode"
       ],
       "metadata": {
         "id": "RNC9RB0Non0k"
